--- a/page2.css
+++ b/page2.css
@@ -632,7 +632,15 @@ footer {
 }
 
 /* -------------------------------------------------------------------------------------------------- */
+
+
 @media (max-width: 391px) {
+#poop{
+    display: none;
+}
+
+}
+@media (max-width: 400px) {
 
  
     .image-container{
@@ -858,13 +866,27 @@ footer {
 }
 
 
+
 /* -------------------------------------------------------------------------------------------------- */
 
-@media (min-width: 600px) {
+@media (max-width: 525px) {
     .article-preview-hero {
         max-width: 600px;
         word-wrap: break-word;
+        
     }
+
+    .home-lint {
+        display: none;
+    }
+.hamburger-menu {
+    display: block !important;
+    margin: auto;
+    padding-right: 28px;
+    cursor: pointer;
+   margin-top: 45px;
+}
+    
 }
 
 
