--- a/index.css
+++ b/index.css
@@ -91,6 +91,31 @@ article a{
     color: black;
 }
 
+/* Add this CSS code at the end of your existing styles */
+
+#additional-articles .article-img,
+#additional-articles .article-img1 {
+    transition: transform 0.2s ease-in-out;
+    border-radius: 2px; /* Set the desired border radius value */
+}
+
+#additional-articles .article-img:hover,
+#additional-articles .article-img1:hover {
+    transform: scale(1.02);
+    opacity: 0.8;
+}
+
+#additional-articles .article-info {
+    display: block;
+    margin: -5px 0;
+    text-transform: uppercase;
+}
+
+#additional-articles article a {
+    text-decoration: none;
+    color: black;
+}
+
 
 .hero-link p {
     padding: 0.9375rem 0; 
