--- a/about.css
+++ b/about.css
@@ -520,6 +520,7 @@ footer {
          display: flex;
     align-items: center;
         display: flex;
+        
        
       }
 
@@ -543,14 +544,7 @@ footer {
         justify-content: space-between;
     }
 
-    .site-logo {
-        width: 23.16px;
-        height: 23.16px;
-        top: 17px;
-        left: 20px;
-        margin: 10px;
-    }
-
+   
     .home-lint {
         color: white;
         padding-right: 100px;
@@ -627,9 +621,10 @@ footer {
  
         .containerpp{
             margin-right: 70px;
-            width: 390px;
+            width: 75%;
             display: flex;
              flex-direction: column;
+            
             
          }
      
