--- a/index.css
+++ b/index.css
@@ -17,10 +17,19 @@ body {
 .container h2, 
 .container p,
 .container span{
-  
+
   padding: 5px 0px;
   
+  
   }
+
+
+
+  #additional-articles span{
+    
+    padding-top: 20px;
+  }
+
 
   .container p{
     padding-left: 20px;
@@ -337,11 +346,6 @@ width: 100%;
 
 display: none;
 
-}
-
-#additional-articles 
-.article-info {
-    padding-top: 10px;
 }
 
 
