--- a/about.css
+++ b/about.css
@@ -77,10 +77,10 @@ text-align: left;
     letter-spacing: 0em;
 }
 
-.logo {
-    display: flex;
-    align-items: center;
-}
+.site-logo{
+    margin-top: 5px;
+  }
+
 
 .container {
     width: 100%;
@@ -256,14 +256,6 @@ article a{
 }
 
 
-.site-logo {
-    width: 23.16px;
-    height: 23.16px;
-    top: 17px;
-    left: 20px;
-  
-
-}
 
 h1 {
     width: 113.75px;
