--- a/page2.css
+++ b/page2.css
@@ -80,11 +80,9 @@ text-align: left;
     line-height: 15px;
     letter-spacing: 0em;
 }
-
-.logo {
-    display: flex;
-    align-items: center;
-}
+.site-logo{
+    margin-top: 5px;
+  }
 
 .container {
     display: flex;
