--- a/about.css
+++ b/about.css
@@ -81,6 +81,10 @@ text-align: left;
     margin-top: 5px;
   }
 
+  .logo {
+    display: flex;
+    align-items: center;
+}
 
 .container {
     width: 100%;
